<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/name"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:minHeight="50dp"
            android:text="@string/county_name" />


        <TextView
            android:id="@+id/all_admitted"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="40dp"
            android:text="@string/all_admitted" />

        <TextView
            android:id="@+id/new_admitted"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="40dp"
            android:text="@string/new_admitted" />

        <TextView
            android:id="@+id/deaths"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/all_deaths" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/corona_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:itemCount="20"
        tools:listitem="@layout/recycler_view_item_corona" />
</androidx.constraintlayout.widget.ConstraintLayout>