<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/square_s"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="296dp"
        android:background="@drawable/square_blue"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/square"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/square"
        android:rotation="-45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/square_s"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_username"
        android:textColor="@color/colorText"
        android:textColorHint="#80F6F6F6"
        app:boxStrokeColor="@color/colorText"
        app:boxStrokeErrorColor="@color/colorError"
        app:errorEnabled="true"
        app:layout_constraintEnd_toStartOf="@+id/square_s"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAuth"
        app:startIconDrawable="@drawable/ic_perm_identity"
        app:startIconTint="@color/colorText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="#80F6F6F6"
        app:boxStrokeColor="@color/colorText"
        app:boxStrokeErrorColor="@color/colorError"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/colorText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorText"
            app:errorEnabled="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/reg2"
        android:textColor="@color/colorText"
        android:tint="@color/colorAccent"
        app:fabSize="normal"
        app:layout_constraintEnd_toStartOf="@+id/square_s"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/square" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_forget"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/authButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/entry"
        android:textColor="@color/colorText"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/forgot_button"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="@+id/forgot_button"
        app:layout_constraintTop_toBottomOf="@+id/forgot_button" />

    <TextView
        android:id="@+id/textAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/auth"
        android:textAppearance="@style/textAuth"
        android:textColor="@color/colorText"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/square_s"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/square" />

    <TextView
        android:id="@+id/regView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/reg"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/square_s"
        app:layout_constraintStart_toEndOf="@+id/square"
        app:layout_constraintTop_toTopOf="@+id/square_s"
        app:layout_constraintVertical_bias="0.128" />


</androidx.constraintlayout.widget.ConstraintLayout>